--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Miskiatty">
+        <activity android:name=".view.ui.activities.PinLoginActivity"></activity>
         <activity android:name=".view.ui.activities.OrderAddSummaryActivity" />
         <activity android:name=".view.ui.activities.OrderAddActiviy" />
         <activity android:name=".view.ui.activities.ProductDetailsActivity" />
@@ -18,10 +19,12 @@
         <activity android:name=".view.ui.activities.ClientDetailsActivity" />
         <activity android:name=".view.ui.activities.StatisticDetailsActivity" />
         <activity android:name=".view.ui.activities.LoginActivity" />
-        <activity android:name=".view.ui.activities.SplashScreenActivity"
+        <activity
+            android:name=".view.ui.activities.SplashScreenActivity"
             android:theme="@style/SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
