--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Miskiatty">
-        <activity android:name=".view.ui.activities.PinLoginActivity"></activity>
-        <activity android:name=".view.ui.activities.OrderAddSummaryActivity" />
-        <activity android:name=".view.ui.activities.OrderAddActiviy" />
-        <activity android:name=".view.ui.activities.ProductDetailsActivity" />
-        <activity android:name=".view.ui.activities.ProductAddActivity" />
-        <activity android:name=".view.ui.activities.ClientsAddInfoActivity" />
-        <activity android:name=".view.ui.activities.ClientsAddActivity" />
-        <activity android:name=".view.ui.activities.ClientDetailsActivity" />
-        <activity android:name=".view.ui.activities.StatisticDetailsActivity" />
-        <activity android:name=".view.ui.activities.LoginActivity" />
+        <activity android:name=".view.ui.login.SetPinLoginActivity"></activity>
+        <activity android:name=".view.ui.login.PinLoginActivity" />
+        <activity android:name=".view.ui.orders.OrderAddSummaryActivity" />
+        <activity android:name=".view.ui.orders.OrderAddActiviy" />
+        <activity android:name=".view.ui.products.ProductDetailsActivity" />
+        <activity android:name=".view.ui.products.ProductAddActivity" />
+        <activity android:name=".view.ui.clients.ClientsAddInfoActivity" />
+        <activity android:name=".view.ui.clients.ClientsAddActivity" />
+        <activity android:name=".view.ui.clients.ClientDetailsActivity" />
+        <activity android:name=".view.ui.statistics.StatisticDetailsActivity" />
+        <activity android:name=".view.ui.login.LoginActivity" />
         <activity
             android:name=".view.ui.activities.SplashScreenActivity"
             android:theme="@style/SplashScreen">
