--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation "androidx.security:security-crypto:1.1.0-alpha03"
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.4"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.4"
 }
