Holdeo y visualización correcta del recycler view.
- Se debía declarar el adapter antes de llamar a los primeros datos, porque sino los datos se cargaban en un adapter null.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Miskiatty">
-        <activity android:name=".view.ui.login.SetPinLoginActivity"></activity>
+        <activity android:name=".view.ui.login.SetPinLoginActivity" />
         <activity android:name=".view.ui.login.PinLoginActivity" />
         <activity android:name=".view.ui.orders.OrderAddSummaryActivity" />
         <activity android:name=".view.ui.orders.OrderAddActiviy" />
