--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.listen.to.miskiatty">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
         android:allowBackup="true"
@@ -17,7 +18,6 @@
         <activity android:name=".view.ui.orders.OrderAddActiviy" />
         <activity android:name=".view.ui.products.ProductDetailsActivity" />
         <activity android:name=".view.ui.products.ProductAddActivity" />
-        <activity android:name=".view.ui.clients.ClientsAddInfoActivity" />
         <activity android:name=".view.ui.clients.ClientsAddActivity" />
         <activity android:name=".view.ui.clients.ClientDetailsActivity" />
         <activity android:name=".view.ui.statistics.StatisticDetailsActivity" />
