--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:theme="@style/Theme.Miskiatty">
         <activity android:name=".view.ui.login.SetPinLoginActivity" />
         <activity android:name=".view.ui.login.PinLoginActivity" />
+        <activity android:name=".view.ui.orders.OrderDetailsActivity"/>
         <activity android:name=".view.ui.orders.OrderAddSummaryActivity" />
         <activity android:name=".view.ui.orders.OrderAddActiviy" />
         <activity android:name=".view.ui.products.ProductDetailsActivity" />
