--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity android:name=".view.ui.login.PinLoginActivity" />
         <activity android:name=".view.ui.orders.OrderDetailsActivity"/>
         <activity android:name=".view.ui.orders.OrderAddSummaryActivity" />
-        <activity android:name=".view.ui.orders.OrderAddActiviy" />
+        <activity android:name=".view.ui.orders.OrderAddActivity" />
         <activity android:name=".view.ui.products.ProductDetailsActivity" />
         <activity android:name=".view.ui.products.ProductAddActivity" />
         <activity android:name=".view.ui.clients.ClientsAddActivity" />
