--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        multiDexEnabled = true
     }
 
     buildTypes {
@@ -60,4 +62,6 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
 }
