--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    implementation 'net.danlew:android.joda:2.10.9.1'
 }
